<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/dcl_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/new_username"
        android:id="@+id/newUsername"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/update_username"
        android:id="@+id/updatedUsername"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_email"
        android:id="@+id/newUseremail"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/updated_email"
        android:inputType="textEmailAddress"
        android:id="@+id/updatedUseremail"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:id="@+id/newPassword"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/updated_password"
        android:inputType="textPassword"
        android:id="@+id/updatedPassword"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="95dp"
        android:text="@string/username_update_button"
        android:id="@+id/usernameUpdateButton"/>



</LinearLayout>