<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dog_details"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_place"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="#336633"
        android:id="@+id/listPlaceName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:id="@+id/detailPlaceName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_address"
        android:textSize="16sp"
        android:textColor="#336633"
        android:id="@+id/listPlaceAddress"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:id="@+id/detailPlaceVicinity"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currently_open"
        android:textSize="16sp"
        android:id="@+id/listPlaceHours"
        android:textColor="#336633"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:id="@+id/detailPlaceOpenNow"/>



</LinearLayout>